Add Speech Commands and update to   const urlBase = https://webnnmodel.s3-us-west-2.amazonaws.com/skeleton_detection/model/;

--- a/examples/model.html
+++ b/examples/model.html
@@ -67,6 +67,7 @@
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
+              <li><a href='speech_commands/'>Speech Commands</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -235,6 +236,28 @@
           </tbody>
         </table>
       </div>
+
+      <h4 class='text-center'>
+          <a href='speech_commands/'>Speech Commands</a>
+        </h4>
+        <div class="table-responsive">
+          <table id='modelnoncv-sc' class='modelcv table table-borderless table-hover'>
+            <caption>Speech Commands - Non-Computer Vision based models</caption>
+            <thead>
+              <tr>
+                <th scope='col'>Model</th>
+                <th scope='col'>Format</th>
+                <th scope='col'>Size</th>
+                <th scope='col'>Paper</th>
+                <th scope='col' title='Netron Model Visualizer'>Netron</th>
+                <th scope='col'>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+
     </div>
   </section>
 
