[tool] fix some mistakes in main.js and template.html

--- a/test/tools/perLayerAnalyzer/template.html
+++ b/test/tools/perLayerAnalyzer/template.html
@@ -16,6 +16,7 @@
 <body>
   <p id = "avg" style="display:none"></p>
   <div id = "result" style="display:none">
+    <p id = "testPlatform"></p>
     <p id = "iterations">Iterations: 1(warming up) + </p>
     <table>
       <tr>
