[tool]add average time units in the table

--- a/test/tools/perLayerAnalyzer/template.html
+++ b/test/tools/perLayerAnalyzer/template.html
@@ -23,7 +23,7 @@
       <th>Layer</th>
       <th>Model_name</th>
       <th>Ops</th>
-      <th>Avg_time</th>
+      <th>Avg_time(ms)</th>
       <th>Bias</th>
       <th>Weight</th>
       <th>Input_dimensions</th>
