--- a/test/real_squeezenet1.1_mobilenetv2-1.0.html
+++ b/test/real_squeezenet1.1_mobilenetv2-1.0.html
@@ -142,7 +142,7 @@
           var tr = table.insertRow(table.rows.length);
           var obj = avg_data[i];
           for (var p in obj) {
-            if (p == 'tenancy') {
+            if (p == null) {
               break;
             }
             var td = tr.insertCell(tr.cells.length);
