[example] Add face recognition use case with facenet(OpenVino) model
Signed-off-by: cuiyan <yanx.cui@intel.com>

--- a/examples/emotion_analysis/index.html
+++ b/examples/emotion_analysis/index.html
@@ -72,6 +72,7 @@
               <li><a href='../super_resolution/'>Super Resolution</a></li>
               <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='../speech_commands/'>Speech Commands</a></li>
+              <li><a href='../face_recognition/'>Face Recognition</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
