--- a/examples/model.html
+++ b/examples/model.html
@@ -68,6 +68,7 @@
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='speech_commands/'>Speech Commands</a></li>
+              <li><a href='face_recognition/'>Face Recognition</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -243,6 +244,27 @@
         <div class="table-responsive">
           <table id='modelnoncv-sc' class='modelcv table table-borderless table-hover'>
             <caption>Speech Commands - Non-Computer Vision based models</caption>
+            <thead>
+              <tr>
+                <th scope='col'>Model</th>
+                <th scope='col'>Format</th>
+                <th scope='col'>Size</th>
+                <th scope='col'>Paper</th>
+                <th scope='col' title='Netron Model Visualizer'>Netron</th>
+                <th scope='col'>Description</th>
+              </tr>
+            </thead>
+            <tbody>
+            </tbody>
+          </table>
+        </div>
+
+      <h4 class='text-center'>
+          <a href='face_recognition/'>Face Recognition</a>
+        </h4>
+        <div class="table-responsive">
+          <table id='modelcv-fr' class='modelcv table table-borderless table-hover'>
+            <caption>Face Recognition - Computer Vision based models</caption>
             <thead>
               <tr>
                 <th scope='col'>Model</th>
