--- a/examples/index.html
+++ b/examples/index.html
@@ -72,6 +72,7 @@
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='speech_commands/'>Speech Commands</a></li>
+              <li><a href='face_recognition/'>Face Recognition</a></li>
             </ul>
           </li>
           <li><a href='model.html'>Models</a></li>
@@ -200,20 +201,23 @@
         <div class='examples-col col-lg-4 col-xs-12'>
           <div class='card card-block text-center'>
             <div>
-              <div class='feature-icon disabled'>
-                <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="users"
-                  class="svg-inline--fa fa-users fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg"
-                  viewBox="0 0 640 512">
-                  <path fill="currentColor"
-                    d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z">
-                  </path>
-                </svg>
+              <div class='feature-icon'>
+                <a href='face_recognition/'>
+                  <svg aria-hidden="true" focusable="false" data-prefix="fas" data-icon="users"
+                    class="svg-inline--fa fa-users fa-w-20" role="img" xmlns="http://www.w3.org/2000/svg"
+                    viewBox="0 0 640 512">
+                    <path fill="currentColor"
+                      d="M96 224c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm448 0c35.3 0 64-28.7 64-64s-28.7-64-64-64-64 28.7-64 64 28.7 64 64 64zm32 32h-64c-17.6 0-33.5 7.1-45.1 18.6 40.3 22.1 68.9 62 75.1 109.4h66c17.7 0 32-14.3 32-32v-32c0-35.3-28.7-64-64-64zm-256 0c61.9 0 112-50.1 112-112S381.9 32 320 32 208 82.1 208 144s50.1 112 112 112zm76.8 32h-8.3c-20.8 10-43.9 16-68.5 16s-47.6-6-68.5-16h-8.3C179.6 288 128 339.6 128 403.2V432c0 26.5 21.5 48 48 48h288c26.5 0 48-21.5 48-48v-28.8c0-63.6-51.6-115.2-115.2-115.2zm-223.7-13.4C161.5 263.1 145.6 256 128 256H64c-35.3 0-64 28.7-64 64v32c0 17.7 14.3 32 32 32h65.9c6.3-47.4 34.9-87.3 75.2-109.4z">
+                    </path>
+                  </svg>
+                </a>
               </div>
             </div>
             <div>
-              <h3 class='disabled'>
-                Face Recognition
+              <h3>
+                <a href='face_recognition/'>Face Recognition</a>
               </h3>
+
               <p>
                 <span class='wip'>WIP</span> Detecting faces of participants by using object detection and checks
                 whether each face was present
@@ -429,7 +433,7 @@
               </h3>
 
               <p>
-                Recognizing a set of voice commands using the audio file or device's microphone input. 
+                Recognizing a set of voice commands using the audio file or device's microphone input.
               </p>
             </div>
           </div>
