--- a/examples/speech_commands/index.html
+++ b/examples/speech_commands/index.html
@@ -72,6 +72,7 @@
               <li><a href='../super_resolution/'>Super Resolution</a></li>
               <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
               <li><a href='../speech_commands/'>Speech Commands</a></li>
+              <li><a href='../face_recognition/'>Face Recognition</a></li>
             </ul>
           </li>
           <li><a href='../model.html'>Models</a></li>
@@ -250,7 +251,7 @@
                         d='M384 64H192C86 64 0 150 0 256s86 192 192 192h192c106 0 192-86 192-192S490 64 384 64zm0 320c-70.8 0-128-57.3-128-128 0-70.8 57.3-128 128-128 70.8 0 128 57.3 128 128 0 70.8-57.3 128-128 128z'>
                       </path>
                     </svg>
-  
+
                     <svg id='roff' aria-hidden='true' focusable='false' data-prefix='fas' data-icon='toggle-off'
                       class='svg-inline--fa fa-toggle-off fa-w-18' viewBox='0 0 576 512'>
                       <title>Off</title>
@@ -266,7 +267,7 @@
                         d='M256 8C119.033 8 8 119.033 8 256s111.033 248 248 248 248-111.033 248-248S392.967 8 256 8zm0 48c110.532 0 200 89.451 200 200 0 110.532-89.451 200-200 200-110.532 0-200-89.451-200-200 0-110.532 89.451-200 200-200m140.204 130.267l-22.536-22.718c-4.667-4.705-12.265-4.736-16.97-.068L215.346 303.697l-59.792-60.277c-4.667-4.705-12.265-4.736-16.97-.069l-22.719 22.536c-4.705 4.667-4.736 12.265-.068 16.971l90.781 91.516c4.667 4.705 12.265 4.736 16.97.068l172.589-171.204c4.704-4.668 4.734-12.266.067-16.971z'>
                       </path>
                     </svg>
-  
+
                     <svg id='rno' aria-hidden='true' focusable='false' data-prefix='far' data-icon='times-circle'
                       class='svg-inline--fa fa-times-circle fa-w-16' viewBox='0 0 512 512'>
                       <title>No</title>
@@ -274,7 +275,7 @@
                         d='M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm101.8-262.2L295.6 256l62.2 62.2c4.7 4.7 4.7 12.3 0 17l-22.6 22.6c-4.7 4.7-12.3 4.7-17 0L256 295.6l-62.2 62.2c-4.7 4.7-12.3 4.7-17 0l-22.6-22.6c-4.7-4.7-4.7-12.3 0-17l62.2-62.2-62.2-62.2c-4.7-4.7-4.7-12.3 0-17l22.6-22.6c4.7-4.7 12.3-4.7 17 0l62.2 62.2 62.2-62.2c4.7-4.7 12.3-4.7 17 0l22.6 22.6c4.7 4.7 4.7 12.3 0 17z'>
                       </path>
                     </svg>
-  
+
                     <svg id='rgo' aria-hidden='true' focusable='false' data-prefix='far' data-icon='play-circle'
                       class='svg-inline--fa fa-play-circle fa-w-16' viewBox='0 0 512 512'>
                       <title>Go</title>
@@ -282,7 +283,7 @@
                         d='M371.7 238l-176-107c-15.8-8.8-35.7 2.5-35.7 21v208c0 18.4 19.8 29.8 35.7 21l176-101c16.4-9.1 16.4-32.8 0-42zM504 256C504 119 393 8 256 8S8 119 8 256s111 248 248 248 248-111 248-248zm-448 0c0-110.5 89.5-200 200-200s200 89.5 200 200-89.5 200-200 200S56 366.5 56 256z'>
                       </path>
                     </svg>
-  
+
                     <svg id='rstop' aria-hidden='true' focusable='false' data-prefix='far' data-icon='stop-circle'
                       class='svg-inline--fa fa-stop-circle fa-w-16' viewBox='0 0 512 512'>
                       <title>Stop</title>
@@ -298,7 +299,7 @@
                         d='M256 504c137 0 248-111 248-248S393 8 256 8 8 119 8 256s111 248 248 248zm0-448c110.5 0 200 89.5 200 200s-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56zm20 328h-40c-6.6 0-12-5.4-12-12V256h-67c-10.7 0-16-12.9-8.5-20.5l99-99c4.7-4.7 12.3-4.7 17 0l99 99c7.6 7.6 2.2 20.5-8.5 20.5h-67v116c0 6.6-5.4 12-12 12z'>
                       </path>
                     </svg>
-  
+
                     <svg id='rdown' aria-hidden='true' focusable='false' data-prefix='far' data-icon='arrow-alt-circle-down'
                       class='svg-inline--fa fa-arrow-alt-circle-down fa-w-16' viewBox='0 0 512 512'>
                       <title>Down</title>
@@ -306,7 +307,7 @@
                         d='M256 8C119 8 8 119 8 256s111 248 248 248 248-111 248-248S393 8 256 8zm0 448c-110.5 0-200-89.5-200-200S145.5 56 256 56s200 89.5 200 200-89.5 200-200 200zm-32-316v116h-67c-10.7 0-16 12.9-8.5 20.5l99 99c4.7 4.7 12.3 4.7 17 0l99-99c7.6-7.6 2.2-20.5-8.5-20.5h-67V140c0-6.6-5.4-12-12-12h-40c-6.6 0-12 5.4-12 12z'>
                       </path>
                     </svg>
-  
+
                     <svg id='rleft' aria-hidden='true' focusable='false' data-prefix='far' data-icon='arrow-alt-circle-left'
                       class='svg-inline--fa fa-arrow-alt-circle-left fa-w-16' viewBox='0 0 512 512'>
                       <title>Left</title>
@@ -314,7 +315,7 @@
                         d='M8 256c0 137 111 248 248 248s248-111 248-248S393 8 256 8 8 119 8 256zm448 0c0 110.5-89.5 200-200 200S56 366.5 56 256 145.5 56 256 56s200 89.5 200 200zm-72-20v40c0 6.6-5.4 12-12 12H256v67c0 10.7-12.9 16-20.5 8.5l-99-99c-4.7-4.7-4.7-12.3 0-17l99-99c7.6-7.6 20.5-2.2 20.5 8.5v67h116c6.6 0 12 5.4 12 12z'>
                       </path>
                     </svg>
-  
+
                     <svg id='rright' aria-hidden='true' focusable='false' data-prefix='far' data-icon='arrow-alt-circle-right'
                       class='svg-inline--fa fa-arrow-alt-circle-right fa-w-16' viewBox='0 0 512 512'>
                       <title>Right</title>
