--- a/examples/model.html
+++ b/examples/model.html
@@ -299,6 +299,13 @@
   <script src='util/base.js'></script>
   <script src='static/js/ui.common.js'></script>
   <script src='static/js/model.js'></script>
-</body>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-147662084-1');
+  </script>
+</body>
 </html>
