--- a/examples/simple/index.html
+++ b/examples/simple/index.html
@@ -136,5 +136,13 @@
         main();
       }
     </script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'UA-147662084-1');
+    </script>
   </body>
 </html>
