--- a/examples/index.html
+++ b/examples/index.html
@@ -477,7 +477,6 @@
   <script src='static/lib/superfish/superfish.min.js'></script>
   <script src='static/lib/stickyjs/sticky.js'></script>
   <script src='static/js/ui.common.js'></script>
-
   <script>
     if ('serviceWorker' in navigator) {
       window.addEventListener('load', function() {
@@ -491,7 +490,13 @@
       });
     }
   </script>
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
 
+    gtag('config', 'UA-147662084-1');
+  </script>
 </body>
-
 </html>
