--- a/workload/index.html
+++ b/workload/index.html
@@ -2,7 +2,7 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>WebNN Benchmark</title>
+    <title>WebNN Workload</title>
     <link rel="stylesheet" href="../examples/third_party/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <style>
       body {
@@ -43,7 +43,7 @@
     <div class="container" id="container">
       <div class="row">
         <div class="col-12">
-          <h1>WebNN Benchmark</h1>
+          <h1>WebNN Workload</h1>
           <div>
             <h4>Category</h4>
             <select id="categoryName">
@@ -165,5 +165,13 @@
     <script src="./resources/utils_sr.js"></script>
     <script src="./resources/utils_ea.js"></script>
     <script src="./resources/main.js"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+  
+      gtag('config', 'UA-147662084-1');
+    </script>
   </body>
 </html>
