--- a/examples/speech_recognition/index.html
+++ b/examples/speech_recognition/index.html
@@ -451,6 +451,7 @@
   <script src='main.js'></script>
   <script src='../static/js/ui.common.js'></script>
   <script src='ui.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/@tensorflow/tfjs@1.2.7"> </script>
 </body>
 
 </html>
