[Example] Fix Face Recognition UI issues

--- a/examples/face_recognition/index.html
+++ b/examples/face_recognition/index.html
@@ -121,7 +121,7 @@
       </table>
     </div>
   </form>
-  <section class='ic' id='ic'>
+  <section class='fn' id='fn'>
     <div class='container' id='container'>
       <a id='extra' href='#' class='mb-1 mt-3'>
         <h3 class='text-center ex' id='ictitle'>
