[example][workload] Upgraded Deeplab models with supported ARGMAX Op for example and workload.                     Added supported ops by DirectML into mapping table of examples/util/base.js.                     Fixes #1056

--- a/workload/index.html
+++ b/workload/index.html
@@ -109,6 +109,8 @@
               <label><input type="checkbox" name="supportedOp" value="23"> RESIZE_BILINEAR</label>
               <br>
               <label><input type="checkbox" name="supportedOp" value="25"> SOFTMAX</label>
+              <br>
+              <label><input type="checkbox" name="supportedOp" value="39"> ARGMAX</label>
             </div>
             <div class="col-8" align="center">
               <canvas id="showCanvas"></canvas>
