--- a/examples/model.html
+++ b/examples/model.html
@@ -5,9 +5,11 @@
   <meta charset='utf-8'>
   <title>Web Neural Network API - Supported Models</title>
   <meta content='width=device-width, initial-scale=1.0' name='viewport'>
-  <meta content='WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
+  <meta
+    content='WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='keywords'>
-  <meta content='WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
+  <meta
+    content='WebML, Web Machine Learning, Machine Learning for Web, Neural Networks, WebNN, WebNN API, Web Neural Network API'
     name='description'>
   <link rel='apple-touch-icon' sizes='57x57' href='static/img/favicon/apple-icon-57x57.png'>
   <link rel='apple-touch-icon' sizes='60x60' href='static/img/favicon/apple-icon-60x60.png'>
@@ -35,12 +37,14 @@
     <div class='container'>
       <div id='logo' class='pull-left'>
         <a href='index.html' id='logo'>
-          <svg preserveAspectRatio='xMidYMid meet' viewBox='-1.2596205660195778 -1.002390572390567 185.26504164633673 39.987210231814544'
-            width='181.27' height='35.99'>
+          <svg preserveAspectRatio='xMidYMid meet'
+            viewBox='-1.2596205660195778 -1.002390572390567 185.26504164633673 39.987210231814544' width='181.27'
+            height='35.99'>
             <defs>
               <text id='a1Hhj0hzGw' x='548' y='158.46' font-size='18' font-weight='200' font-style='normal'
-                letter-spacing='0' alignment-baseline='before-edge' transform='matrix(1 0 0 1 -286.8825161889153 -158.45741702741705)'
-                style='line-height:100%' xml:space='preserve' dominant-baseline='text-before-edge'>
+                letter-spacing='0' alignment-baseline='before-edge'
+                transform='matrix(1 0 0 1 -286.8825161889153 -158.45741702741705)' style='line-height:100%'
+                xml:space='preserve' dominant-baseline='text-before-edge'>
                 <tspan x='548' dy='0em' alignment-baseline='before-edge' dominant-baseline='text-before-edge'
                   text-anchor='end'>Neural Network</tspan>
                 <tspan x='538' dy='1em' alignment-baseline='before-edge' dominant-baseline='text-before-edge'
@@ -64,6 +68,7 @@
               <li><a href='object_detection/'>Person/Object Detection</a></li>
               <li><a href='semantic_segmentation/'>Semantic Segmentation</a></li>
               <li><a href='skeleton_detection/'>Skeleton Detection</a></li>
+              <li><a href='face_recognition/'>Face Recognition</a></li>
               <li><a href='facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='super_resolution/'>Super Resolution</a></li>
               <li><a href='emotion_analysis/'>Emotion Analysis</a></li>
@@ -82,25 +87,25 @@
       </h2>
 
       <h4 class='text-center'>
-          <a href='image_classification/'>Image Classification</a>
-        </h4>
-        <div class="table-responsive">
-          <table id='modelcv-ic' class='modelcv table table-borderless table-hover'>
-            <caption>Image Classification - Computer Vision based models</caption>
-            <thead>
-              <tr>
-                <th scope='col'>Model</th>
-                <th scope='col'>Format</th>
-                <th scope='col'>Size</th>
-                <th scope='col'>Paper</th>
-                <th scope='col' title='Netron Model Visualizer'>Netron</th>
-                <th scope='col'>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
+        <a href='image_classification/'>Image Classification</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-ic' class='modelcv table table-borderless table-hover'>
+          <caption>Image Classification - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
 
       <h4 class='text-center'>
         <a href='object_detection/'>Object/Person Detection</a>
@@ -124,24 +129,24 @@
       </div>
 
       <h4 class='text-center'>
-          <a href='semantic_segmentation/'>Semantic Segmentation</a>
-        </h4>
-        <div class="table-responsive">
-          <table id='modelcv-ss' class='modelcv table table-borderless table-hover'>
-            <caption>Semantic Segmentation - Computer Vision based models</caption>
-            <thead>
-              <tr>
-                <th scope='col'>Model</th>
-                <th scope='col'>Format</th>
-                <th scope='col'>Size</th>
-                <th scope='col'>Paper</th>
-                <th scope='col' title='Netron Model Visualizer'>Netron</th>
-                <th scope='col'>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
+        <a href='semantic_segmentation/'>Semantic Segmentation</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-ss' class='modelcv table table-borderless table-hover'>
+          <caption>Semantic Segmentation - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
       </div>
 
       <h4 class='text-center'>
@@ -166,55 +171,85 @@
       </div>
 
       <h4 class='text-center'>
-          <a href='object_detection/'>Face Detection</a>
-        </h4>
-        <div class="table-responsive">
-          <table id='modelcv-odf' class='modelcv table table-borderless table-hover'>
-            <caption>Face Detection - Computer Vision based models</caption>
-            <thead>
-              <tr>
-                <th scope='col'>Model</th>
-                <th scope='col'>Format</th>
-                <th scope='col'>Size</th>
-                <th scope='col'>Paper</th>
-                <th scope='col' title='Netron Model Visualizer'>Netron</th>
-                <th scope='col'>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-          <table id='modelcv-fld' class='modelcv table table-borderless table-hover'>
-            <caption>Facial Landmark Detection - Computer Vision based models</caption>
-            <thead>
-              <tr>
-                <th scope='col'>Model</th>
-                <th scope='col'>Format</th>
-                <th scope='col'>Size</th>
-                <th scope='col'>Paper</th>
-                <th scope='col' title='Netron Model Visualizer'>Netron</th>
-                <th scope='col'>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-          <table id='modelcv-ea' class='modelcv table table-borderless table-hover'>
-              <caption>Emotion Analysis - Computer Vision based models</caption>
-              <thead>
-                <tr>
-                  <th scope='col'>Model</th>
-                  <th scope='col'>Format</th>
-                  <th scope='col'>Size</th>
-                  <th scope='col'>Paper</th>
-                  <th scope='col' title='Netron Model Visualizer'>Netron</th>
-                  <th scope='col'>Description</th>
-                </tr>
-              </thead>
-              <tbody>
-              </tbody>
-            </table>
-        </div>
+        <a href='object_detection/'>Face Detection</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-odf' class='modelcv table table-borderless table-hover'>
+          <caption>Face Detection - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+      <h4 class='text-center'>
+        <a href='face_recognition/'>Face Recognition</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-fr' class='modelcv table table-borderless table-hover'>
+          <caption>Face Recognition - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+      <h4 class='text-center'>
+        <a href='facial_landmark_detection/'>Facial Landmark Detection</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-fld' class='modelcv table table-borderless table-hover'>
+          <caption>Facial Landmark Detection - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
+      <h4 class='text-center'>
+        <a href='emotion_analysis/'>Emotion Analysis</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelcv-ea' class='modelcv table table-borderless table-hover'>
+          <caption>Emotion Analysis - Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
 
       <h4 class='text-center'>
         <a href='super_resolution/'>Super Resolution</a>
@@ -238,25 +273,25 @@
       </div>
 
       <h4 class='text-center'>
-          <a href='speech_commands/'>Speech Commands</a>
-        </h4>
-        <div class="table-responsive">
-          <table id='modelnoncv-sc' class='modelcv table table-borderless table-hover'>
-            <caption>Speech Commands - Non-Computer Vision based models</caption>
-            <thead>
-              <tr>
-                <th scope='col'>Model</th>
-                <th scope='col'>Format</th>
-                <th scope='col'>Size</th>
-                <th scope='col'>Paper</th>
-                <th scope='col' title='Netron Model Visualizer'>Netron</th>
-                <th scope='col'>Description</th>
-              </tr>
-            </thead>
-            <tbody>
-            </tbody>
-          </table>
-        </div>
+        <a href='speech_commands/'>Speech Commands</a>
+      </h4>
+      <div class="table-responsive">
+        <table id='modelnoncv-sc' class='modelcv table table-borderless table-hover'>
+          <caption>Speech Commands - Non-Computer Vision based models</caption>
+          <thead>
+            <tr>
+              <th scope='col'>Model</th>
+              <th scope='col'>Format</th>
+              <th scope='col'>Size</th>
+              <th scope='col'>Paper</th>
+              <th scope='col' title='Netron Model Visualizer'>Netron</th>
+              <th scope='col'>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+          </tbody>
+        </table>
+      </div>
 
     </div>
   </section>
@@ -271,7 +306,8 @@
           </div>
           <div class='webmlbadge mb-4'>
             <div class='webml-title'>W3C Spec</div>
-            <div class='webml-status-true'><a href='https://webmachinelearning.github.io/webnn/#usecases' title='W3C Web Neural Network API Use Cases'>Use
+            <div class='webml-status-true'><a href='https://webmachinelearning.github.io/webnn/#usecases'
+                title='W3C Web Neural Network API Use Cases'>Use
                 Cases</a></div>
           </div>
           <p>&copy;2019 <a href='index.html'>WebNN API</a></p>
@@ -281,12 +317,15 @@
   </footer>
 
   <a href='https://github.com/intel/webml-polyfill/' class='github-corner' aria-label='View source on GitHub'>
-    <svg width='70' height='70' viewBox='0 0 250 250' style='fill:rgba(255, 255, 255, 0.1); color:rgba(255, 255, 255, 0.9); position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);'
+    <svg width='70' height='70' viewBox='0 0 250 250'
+      style='fill:rgba(255, 255, 255, 0.1); color:rgba(255, 255, 255, 0.9); position: absolute; top: 0; border: 0; left: 0; transform: scale(-1, 1);'
       aria-hidden='true'>
       <path d='M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z'></path>
-      <path d='M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2'
+      <path
+        d='M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2'
         fill='currentColor' style='transform-origin: 130px 106px;' class='octo-arm'></path>
-      <path d='M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z'
+      <path
+        d='M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z'
         fill='currentColor' class='octo-body'></path>
     </svg>
   </a>
@@ -302,10 +341,11 @@
   <script async src="https://www.googletagmanager.com/gtag/js?id=UA-147662084-1"></script>
   <script>
     window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
+    function gtag() { dataLayer.push(arguments); }
     gtag('js', new Date());
 
     gtag('config', 'UA-147662084-1');
   </script>
 </body>
+
 </html>
