--- a/examples/object_detection/index.html
+++ b/examples/object_detection/index.html
@@ -68,6 +68,7 @@
               <li><a href='../object_detection/'>Person/Object Detection</a></li>
               <li><a href='../semantic_segmentation/'>Semantic Segmentation</a></li>
               <li><a href='../skeleton_detection/'>Skeleton Detection</a></li>
+              <li><a href='../face_recognition/'>Face Recognition</a></li>
               <li><a href='../facial_landmark_detection/'>Facial Landmark Detection</a></li>
               <li><a href='../super_resolution/'>Super Resolution</a></li>
               <li><a href='../emotion_analysis/'>Emotion Analysis</a></li>
